# result-service-gui

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  competition_format_individual_sprint.json  competition_format_individual_sprint_all_to_finals.json  competition_format_interval_start.json  docker-compose.yml  global_settings.json  mypy.ini  noxfile.py  photopusher_settings.json  pyproject.toml  pytest.ini  sports_clubs.json
.github/: copilot-instructions.md
.github/workflows/: deploy_webserver.yml  test.yml
docs/: 00_index.md  01_architecture_overview.md  02_c4_context.md  README.md  c4-architecture-instructions.md  index.md
result_service_gui/: __init__.py  app.py  gunicorn_config.py
result_service_gui/adapters/: __init__.py  competition_format_adapter.py  config_adapter.py  contestants_adapter.py  events_adapter.py  raceclass_result_adapter.py  raceclasses_adapter.py  start_adapter.py  status_adapter.py
result_service_gui/config/: global_settings.json  sports_clubs.json
result_service_gui/files/: Resultat_Eksempel.csv  Resultat_G16.csv  Resultat_J16.csv
result_service_gui/model/: __init__.py  album_model.py  changelog.py  race_model.py
result_service_gui/services/: __init__.py  ai_image_service.py  albums_adapter.py  competition_format_adapter.py  config_adapter.py  contestants_adapter.py  events_adapter.py  foto_service.py  google_cloud_storage_adapter.py  google_photos_adapter.py  google_pub_sub_adapter.py  photo_timing_service.py  photos_adapter.py  raceclass_result_adapter.py  raceclass_result_service.py  raceclasses_adapter.py  raceplans_adapter.py  result_adapter.py  resultat_heat_service.py  resultat_service.py  start_adapter.py  status_adapter.py  time_events_adapter.py  time_events_service.py  user_adapter.py
result_service_gui/static/: styles.css  styles_kjelsaas.css  styles_lyn.css  styles_new.css  styles_print.css  styles_whitelabel.css
result_service_gui/static/logo/: startliste.csv
result_service_gui/templates/: _race_progress.html  adm_base.html  config.html  contestants.html  control.html  corrections.html  dashboard.html  events.html  index.html  lists_csv.html  live.html  login.html  open_base.html  open_base_new.html  photo_adm.html  photo_edit.html  photo_finish.html  photo_sync.html  photos.html  photos_edit.html  print_base.html  print_dash.html  print_lists.html  print_raceplan.html  print_results.html  resultat.html  resultat_edit.html  resultat_edit_new.html  start.html  start_edit.html  td_report.html  timing.html  timing_dash.html  timing_verify.html  video_events.html
result_service_gui/views/: __init__.py  config.py  contestants.py  control.py  corrections.py  csv_list.py  dashboard.py  events.py  lists_csv.py  live.py  liveness.py  login.py  logout.py  main.py  photo_edit.py  photo_finish.py  photo_sync.py  photo_update.py  photos.py  photos_adm.py  photos_edit.py  print_dash.py  print_lists.py  resultat.py  resultat_edit.py  resultat_edit_new.py  resultat_update.py  start.py  start_edit.py  td_report.py  timing.py  timing_dash.py  timing_info.py  timing_verify.py  utils.py  video_events.py
src/event_service_gui/: gunicorn_config.py
src/event_service_gui/services/: __init__.py  events_adapter.py  raceclasses_adapter.py  schedules_adapter.py
src/event_service_gui/static/: styles.css  styles_kjelsaas.css  styles_lyn.css
src/event_service_gui/templates/: events.html  index.html  login.html  raceclasses.html  schedules.html  users.html
src/event_service_gui/views/: __init__.py  liveness.py  login.py  logout.py  main.py  users.py
src/result_service_gui/: app.py
src/result_service_gui/services/: __init__.py  contestants_adapter.py  dashboard_adapter.py  deltakere_service.py  events_adapter.py  foto_service.py  innstillinger_service.py  kjoreplan_service.py  klasser_service.py  raceclasses_adapter.py  raceplans_adapter.py  result_adapter.py  start_adapter.py  start_service.py  time_events_adapter.py  time_events_service.py  user_adapter.py
src/result_service_gui/static/: styles.css  styles_lyn.css
src/result_service_gui/templates/: adm_base.html  contestants.html  control.html  dashboard.html  events.html  index.html  live.html  login.html  passage.html  resultat.html  start.html  timing.html
src/result_service_gui/views/: __init__.py  contestants.py  control.py  dashboard.py  events.py  live.py  login.py  main.py  passage.py  raceclasses.py  resultat.py  schedules.py  start.py  timing.py  utils.py
tests/: __init__.py  conftest.py
tests/contract/: __init__.py  test_live.py  test_ping.py  test_start.py
tests/integration/: __init__.py  test_main.py  test_raceclasses_adapter.py
